--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mavon-editor": "^2.10.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
